fixed event component text alignment

--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ a:hover {
   font-family: 'Palatino';
   font-style: normal;
   font-weight: 700;
-
+  text-align: left;
   color: #000000;
 
   height: 60px;
@@ -118,6 +118,7 @@ a:hover {
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  text-align: left;
 
   color: #000000;
 }
